--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -97,6 +97,7 @@
         <add namespace="Molecule.MvcWebSite.atomes.photos.Data"/>
         <add namespace="Molecule.MvcWebSite.atomes.photos.Controllers"/>
         <add namespace="WebPhoto.Providers"/>
+        <add namespace="Molecule.Web.Mvc"/>
 			</namespaces>
 		</pages>
 		<httpHandlers>
