--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -111,7 +111,6 @@
       <DependentUpon>webmusic.fr.resx</DependentUpon>
     </Compile>
     <Compile Include="atomes\music\Atome.cs" />
-    <Compile Include="atomes\music\Controllers\LibraryController.cs" />
     <Compile Include="atomes\music\Controllers\PlayerController.cs" />
     <Compile Include="atomes\music\CoverArt\CoverArtFile.aspx.cs">
       <DependentUpon>CoverArtFile.aspx</DependentUpon>
@@ -122,7 +121,9 @@
     <Compile Include="atomes\music\Data\AlbumData.cs" />
     <Compile Include="atomes\music\Data\ArtistData.cs" />
     <Compile Include="atomes\music\Data\IndexData.cs" />
+    <Compile Include="atomes\music\Data\SearchData.cs" />
     <Compile Include="atomes\music\Data\SongData.cs" />
+    <Compile Include="atomes\music\Services\SearchResult.cs" />
     <Compile Include="atomes\music\Views\Player\Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
