--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -98,7 +98,8 @@
         <add namespace="Molecule.MvcWebSite.atomes.photos.Controllers"/>
         <add namespace="WebPhoto.Providers"/>
         <add namespace="Molecule.Web.Mvc"/>
-			</namespaces>
+        <add namespace="Molecule.MvcWebSite.Models"/>
+      </namespaces>
 		</pages>
 		<httpHandlers>
 			<remove verb="*" path="*.asmx"/>
