--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -110,6 +110,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>webmusic.fr.resx</DependentUpon>
     </Compile>
+    <Compile Include="atomes\admin\Atome.cs" />
+    <Compile Include="atomes\admin\Controllers\PreferencesController.cs" />
+    <Compile Include="atomes\admin\Data\PreferencesData.cs" />
     <Compile Include="atomes\music\Atome.cs" />
     <Compile Include="atomes\music\Controllers\AdminController.cs" />
     <Compile Include="atomes\music\Controllers\PlayerController.cs" />
@@ -314,6 +317,9 @@
     <None Include="App_Themes\bloup\images\molecule-6-rot.svg" />
     <None Include="App_Themes\bloup\molecule.cssx" />
     <None Include="Atome.xsd" />
+    <Content Include="atomes\admin\Views\Web.config" />
+    <Content Include="atomes\admin\Atome.xml" />
+    <Content Include="atomes\admin\Views\Preferences\Index.aspx" />
     <Content Include="atomes\music\Views\Admin\Index.aspx" />
     <Content Include="atomes\photos\Views\Admin\Index.aspx" />
     <Content Include="Views\Shared\PreferencesPage.Master" />
