--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -314,6 +314,8 @@
     <None Include="App_Themes\bloup\images\molecule-6-rot.svg" />
     <None Include="App_Themes\bloup\molecule.cssx" />
     <None Include="Atome.xsd" />
+    <Content Include="App_Themes\bloup\images\treeview-default-line.gif" />
+    <Content Include="App_Themes\bloup\images\treeview-default.gif" />
     <Content Include="atomes\admin\Views\Web.config" />
     <Content Include="atomes\admin\Atome.xml" />
     <Content Include="atomes\admin\Views\Preferences\Index.aspx" />
