--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -53,7 +53,7 @@
             ASP.NET to identify an incoming user. 
     -->
 		<authentication mode="Forms">
-			<forms loginUrl="~/Account/LogOn" timeout="2880"/>
+			<forms loginUrl="~/admin/Authentification/LogOn" timeout="2880"/>
 		</authentication>
     <membership defaultProvider="SqliteProvider" userIsOnlineTimeWindow="120">
       <providers>
@@ -125,7 +125,7 @@
 				<providerOption name="WarnAsError" value="false"/>
 			</compiler>
 		</compilers>
-	</system.codedom>
+	</system.codedom> 
 	<system.web.extensions/>
 	<!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
