--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -29,7 +29,9 @@
 		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.web>
-		<!-- 
+    <customErrors mode="Off"/>
+
+    <!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
             affects performance, set this value to true only 
