--- a/trunk/WebPhoto/WebPhoto.Providers.Stub/WebPhoto.Providers.Stub.csproj
+++ b/trunk/WebPhoto/WebPhoto.Providers.Stub/WebPhoto.Providers.Stub.csproj
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\Molecule.WebSite\atomes\photo\bin\providers\</OutputPath>
+    <OutputPath>..\..\Molecule.MvcWebSite\atomes\photos\bin\providers\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
