--- a/trunk/Molecule.MvcWebSite/atomes/photos/Views/Web.config
+++ b/trunk/Molecule.MvcWebSite/atomes/photos/Views/Web.config
@@ -23,6 +23,7 @@
       </controls>
       <namespaces>
         <add namespace="WebPhoto.Services"/>
+        <add namespace="Molecule.MvcWebSite.atomes.photos"/>
         <add namespace="Molecule.MvcWebSite.atomes.photos.Data"/>
         <add namespace="Molecule.MvcWebSite.atomes.photos.Controllers"/>
         <add namespace="WebPhoto.Providers"/>
