--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -82,6 +82,7 @@
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			</controls>
 			<namespaces>
+        <add namespace="Molecule"/>
         <add namespace="Mono.Rocks"/>
         <add namespace="MvcContrib"/>
         <add namespace="MvcContrib.UI"/>
