--- a/trunk/Molecule/Molecule.csproj
+++ b/trunk/Molecule/Molecule.csproj
@@ -117,6 +117,7 @@
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
     <Compile Include="Metadata\JpegHeaderReader.cs" />
+    <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceNotFoundException.cs" />
     <Compile Include="Runtime\Plugin.cs" />
