--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -62,7 +62,7 @@
         <add name="SqliteProvider" type="Molecule.Web.Security.SQLiteMembershipProvider"/>
       </providers>
     </membership>
-    <roleManager defaultProvider="SqliteProvider" enabled="true" createPersistentCookie="true" cookieTimeout="600" cacheRolesInCookie="true">
+    <roleManager defaultProvider="SqliteProvider" enabled="true" createPersistentCookie="true" cookieTimeout="600" cacheRolesInCookie="false">
       <providers>
         <clear/>
         <add name="SqliteProvider" type="Molecule.Web.Security.SQLiteRoleProvider"/>
